--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=CleanAndUnitOfWorkDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
